--- a/web/index.html
+++ b/web/index.html
@@ -8,8 +8,13 @@
 </head>
 <body>
     <header>buenas</header>
-    <h1>hola</h1>
+    <nav>
+        <div>Historia</div>
+        <div>Web 2.0</div>
+        <div>Tecnología</div>
+        <div>CMS</div>
+    </nav>
     <h3>esto es un titulo</h3>
- hola mundo
+ holaa
 </body>
 </html>
