--- a/web/index.html
+++ b/web/index.html
@@ -9,10 +9,10 @@
 <body>
     <header>buenas</header>
     <nav>
-        <div>Historia</div>
-        <div>Web 2.0</div>
-        <div>Tecnología</div>
-        <div>CMS</div>
+        <div class="tarjeta">Historia</div>
+        <div class="tarjeta">Web 2.0</div>
+        <div class="tarjeta">Tecnología</div>
+        <div class="tarjeta">CMS</div>
     </nav>
     <h3>esto es un titulo</h3>
  holaa
