imagen de fondo

--- a/web/index.html
+++ b/web/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="STYLE/index.CSS">
 </head>
 <body>
-    <header>buenas
-        
+    <header id="texto">buenas
+    
     </header>
     <nav>
         <div class="tarjeta"> <h3>Historia</h3>
